Fix #264 Add Part 02 Step 13 testing logic to the project along with the unit tests for the code written.  Clean up code and fix Part 01 Step 23 to correctly conform to the requirements.